--- a/accounts.html
+++ b/accounts.html
@@ -24,7 +24,7 @@
       color: white;
       text-decoration: none;
     }
-    .profile-container {
+    .container {
       margin-top: 30px;
     }
     .profile-pic {
@@ -33,6 +33,21 @@
       border-radius: 50%;
       object-fit: cover;
       border: 2px solid white;
+    }
+    input, textarea {
+      background: #111;
+      color: white;
+      border: 1px solid #444;
+      padding: 5px;
+      margin: 5px;
+    }
+    button {
+      background: #222;
+      color: white;
+      padding: 6px 12px;
+      border: 1px solid white;
+      margin-top: 10px;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -44,27 +59,39 @@
       <a href="view-profiles.html">View Profiles</a>
       <a href="chat.html">Global Chat</a>
       <a href="echoes.html">Echoes</a>
-      <a href="edit-profile.html">Edit Profile</a>
-      <a href="#" id="auth-link">Login</a>
     </nav>
   </header>
 
-  <div class="profile-container">
-    <h2>Your Account</h2>
+  <div class="container" id="auth-section">
+    <h2>Sign Up / Log In</h2>
+    <input type="email" id="email" placeholder="Email"><br>
+    <input type="password" id="password" placeholder="Password"><br>
+    <button onclick="signup()">Sign Up</button>
+    <button onclick="login()">Log In</button>
+  </div>
+
+  <div class="container" id="profile-section" style="display:none;">
+    <h2>Your Profile</h2>
     <img id="profile-pic" class="profile-pic" src="default.jpg" alt="Profile Picture"><br><br>
     <input type="file" id="image-upload"><br><br>
-    <div id="profile-info"></div>
+    <input type="text" id="username" placeholder="Username"><br>
+    <input type="text" id="name" placeholder="Name"><br>
+    <input type="number" id="age" placeholder="Age"><br>
+    <input type="text" id="gender" placeholder="Gender"><br>
+    <textarea id="bio" placeholder="Bio"></textarea><br>
+    <button onclick="saveProfile()">Save Profile</button><br><br>
+    <button onclick="logout()">Log Out</button>
   </div>
 
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyD...",
       authDomain: "void-d9ec4.firebaseapp.com",
+      databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
       projectId: "void-d9ec4",
-      storageBucket: "void-d9ec4.appspot.com",
+      storageBucket: "void-d9ec4.firebasestorage.googleapis.com",
       messagingSenderId: "267268035851",
-      appId: "1:267268035851:web:d535fe4175c06f170f3e0e",
-      databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com"
+      appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
     };
     firebase.initializeApp(firebaseConfig);
 
@@ -72,55 +99,77 @@
     const db = firebase.database();
     const storage = firebase.storage();
 
-    const profilePic = document.getElementById('profile-pic');
-    const imageUpload = document.getElementById('image-upload');
-    const profileInfo = document.getElementById('profile-info');
-    const authLink = document.getElementById('auth-link');
+    const authSection = document.getElementById('auth-section');
+    const profileSection = document.getElementById('profile-section');
 
     auth.onAuthStateChanged(user => {
       if (user) {
-        authLink.textContent = 'Logout';
-        authLink.onclick = () => auth.signOut();
+        authSection.style.display = 'none';
+        profileSection.style.display = 'block';
 
         const uid = user.uid;
         const userRef = db.ref('users/' + uid);
+
         userRef.once('value').then(snapshot => {
-          const data = snapshot.val();
-          if (data && data.profilePicURL) {
-            profilePic.src = data.profilePicURL;
+          const data = snapshot.val() || {};
+          document.getElementById('username').value = data.username || '';
+          document.getElementById('name').value = data.name || '';
+          document.getElementById('age').value = data.age || '';
+          document.getElementById('gender').value = data.gender || '';
+          document.getElementById('bio').value = data.bio || '';
+          if (data.profilePicURL) {
+            document.getElementById('profile-pic').src = data.profilePicURL;
           }
-          profileInfo.innerHTML = `
-            <p><strong>Username:</strong> ${data.username || 'N/A'}</p>
-            <p><strong>Name:</strong> ${data.name || 'N/A'}</p>
-            <p><strong>Age:</strong> ${data.age || 'N/A'}</p>
-            <p><strong>Gender:</strong> ${data.gender || 'N/A'}</p>
-            <p><strong>Bio:</strong> ${data.bio || 'N/A'}</p>
-          `;
         });
 
-        imageUpload.addEventListener('change', e => {
+        document.getElementById('image-upload').addEventListener('change', e => {
           const file = e.target.files[0];
           if (!file) return;
           const storageRef = storage.ref('profile_pictures/' + uid);
-          storageRef.put(file).then(snapshot => {
-            return snapshot.ref.getDownloadURL();
-          }).then(url => {
+          storageRef.put(file).then(snapshot => snapshot.ref.getDownloadURL()).then(url => {
             userRef.update({ profilePicURL: url });
-            profilePic.src = url;
+            document.getElementById('profile-pic').src = url;
             alert('Profile picture updated!');
-          }).catch(err => {
-            console.error(err);
-            alert('Failed to upload image.');
           });
         });
 
       } else {
-        authLink.textContent = 'Login';
-        authLink.href = 'login.html';
-        profileInfo.innerHTML = '<p>Please log in to view your account.</p>';
-        imageUpload.style.display = 'none';
+        authSection.style.display = 'block';
+        profileSection.style.display = 'none';
       }
     });
+
+    function signup() {
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+      auth.createUserWithEmailAndPassword(email, password).catch(alert);
+    }
+
+    function login() {
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+      auth.signInWithEmailAndPassword(email, password).catch(alert);
+    }
+
+    function logout() {
+      auth.signOut();
+    }
+
+    function saveProfile() {
+      const uid = auth.currentUser.uid;
+      const userRef = db.ref('users/' + uid);
+      const data = {
+        username: document.getElementById('username').value,
+        name: document.getElementById('name').value,
+        age: document.getElementById('age').value,
+        gender: document.getElementById('gender').value,
+        bio: document.getElementById('bio').value
+      };
+      userRef.update(data).then(() => {
+        alert('Profile saved!');
+        window.location.href = 'view-profiles.html';
+      });
+    }
   </script>
 </body>
 </html>
