--- a/accounts.html
+++ b/accounts.html
@@ -1,181 +1,210 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Accounts - VOID</title>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Void — Account</title>
   <style>
     body {
       margin: 0;
+      font-family: Arial, sans-serif;
       background-color: black;
       color: white;
-      font-family: sans-serif;
       text-align: center;
     }
+
     header {
-      padding: 10px;
+      padding: 20px;
+      background-color: #111;
+      font-size: 28px;
+      font-weight: bold;
       border-bottom: 1px solid #444;
     }
-    nav a {
-      margin: 0 10px;
-      color: white;
-      text-decoration: none;
-    }
-    .container {
+
+    .form-container {
       margin-top: 30px;
     }
-    .profile-pic {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 2px solid white;
-    }
-    input, textarea {
-      background: #111;
-      color: white;
-      border: 1px solid #444;
-      padding: 5px;
+
+    input, button {
       margin: 5px;
+      padding: 10px;
+      border: none;
+      border-radius: 4px;
     }
+
     button {
-      background: #222;
+      background-color: #333;
       color: white;
-      padding: 6px 12px;
-      border: 1px solid white;
-      margin-top: 10px;
       cursor: pointer;
     }
+
+    button:hover {
+      background-color: #555;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    #profileView {
+      margin-top: 30px;
+    }
+
+    #editProfileForm {
+      margin-top: 20px;
+    }
+
+    img.profile-pic {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-top: 10px;
+    }
   </style>
+
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-storage-compat.js"></script>
 </head>
 <body>
-  <header>
-    <h1>VOID</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="view-profiles.html">View Profiles</a>
-      <a href="chat.html">Global Chat</a>
-      <a href="echoes.html">Echoes</a>
-    </nav>
-  </header>
 
-  <div class="container" id="auth-section">
-    <h2>Sign Up / Log In</h2>
+  <header>VOID — Accounts</header>
+
+  <div class="form-container" id="authForms">
+    <h2 id="formTitle">Login</h2>
     <input type="email" id="email" placeholder="Email"><br>
     <input type="password" id="password" placeholder="Password"><br>
-    <button onclick="signup()">Sign Up</button>
-    <button onclick="login()">Log In</button>
+    <button onclick="login()">Login</button>
+    <button onclick="toggleForm()">Switch to Signup</button>
   </div>
 
-  <div class="container" id="profile-section" style="display:none;">
+  <div class="form-container hidden" id="signupForm">
+    <h2>Signup</h2>
+    <input type="text" id="signupUsername" placeholder="Username"><br>
+    <input type="email" id="signupEmail" placeholder="Email"><br>
+    <input type="password" id="signupPassword" placeholder="Password"><br>
+    <button onclick="signup()">Signup</button>
+    <button onclick="toggleForm()">Back to Login</button>
+  </div>
+
+  <div id="profileView" class="hidden">
     <h2>Your Profile</h2>
-    <img id="profile-pic" class="profile-pic" src="default.jpg" alt="Profile Picture"><br><br>
-    <input type="file" id="image-upload"><br><br>
-    <input type="text" id="username" placeholder="Username"><br>
-    <input type="text" id="name" placeholder="Name"><br>
-    <input type="number" id="age" placeholder="Age"><br>
-    <input type="text" id="gender" placeholder="Gender"><br>
-    <textarea id="bio" placeholder="Bio"></textarea><br>
-    <button onclick="saveProfile()">Save Profile</button><br><br>
-    <button onclick="logout()">Log Out</button>
+    <img id="profileImage" class="profile-pic" src="" alt="Profile Picture"><br>
+    <p><strong>Username:</strong> <span id="viewUsername"></span></p>
+    <p><strong>Email:</strong> <span id="viewEmail"></span></p>
+    <button onclick="showEditForm()">Edit Profile</button>
+    <button onclick="logout()">Logout</button>
+  </div>
+
+  <div id="editProfileForm" class="hidden">
+    <h2>Edit Profile</h2>
+    <input type="text" id="editUsername" placeholder="New Username"><br>
+    <input type="file" id="profilePicInput"><br>
+    <button onclick="saveProfile()">Save</button>
   </div>
 
   <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyD...",
+      apiKey: "AIzaSyD1YgjFsxh-xZfeHlrxt_0igmH6SBIMcuc",
       authDomain: "void-d9ec4.firebaseapp.com",
       databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
       projectId: "void-d9ec4",
-      storageBucket: "void-d9ec4.firebasestorage.googleapis.com",
+      storageBucket: "void-d9ec4.appspot.com",
       messagingSenderId: "267268035851",
-      appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
+      appId: "1:267268035851:web:d535fe4175c06f170f3e0e",
+      measurementId: "G-78DGNW8HV3"
     };
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
     const db = firebase.database();
     const storage = firebase.storage();
 
-    const authSection = document.getElementById('auth-section');
-    const profileSection = document.getElementById('profile-section');
-
-    auth.onAuthStateChanged(user => {
-      if (user) {
-        authSection.style.display = 'none';
-        profileSection.style.display = 'block';
-
-        const uid = user.uid;
-        const userRef = db.ref('users/' + uid);
-
-        userRef.once('value').then(snapshot => {
-          const data = snapshot.val() || {};
-          document.getElementById('username').value = data.username || '';
-          document.getElementById('name').value = data.name || '';
-          document.getElementById('age').value = data.age || '';
-          document.getElementById('gender').value = data.gender || '';
-          document.getElementById('bio').value = data.bio || '';
-          if (data.profilePicURL) {
-            document.getElementById('profile-pic').src = data.profilePicURL;
-          }
-        });
-
-        document.getElementById('image-upload').addEventListener('change', e => {
-          const file = e.target.files[0];
-          if (!file) return;
-          const storageRef = storage.ref('profile_pictures/' + uid);
-          storageRef.put(file).then(snapshot => snapshot.ref.getDownloadURL()).then(url => {
-            userRef.update({ profilePicURL: url });
-            document.getElementById('profile-pic').src = url;
-            alert('Profile picture updated!');
-          });
-        });
-
-      } else {
-        authSection.style.display = 'block';
-        profileSection.style.display = 'none';
-      }
-    });
+    function toggleForm() {
+      document.getElementById('authForms').classList.toggle('hidden');
+      document.getElementById('signupForm').classList.toggle('hidden');
+    }
 
     function signup() {
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-      auth.createUserWithEmailAndPassword(email, password)
-        .then(() => alert('Signed up successfully. You are now logged in.'))
-        .catch(error => alert(error.message));
+      const email = document.getElementById('signupEmail').value;
+      const password = document.getElementById('signupPassword').value;
+      const username = document.getElementById('signupUsername').value;
+
+      if (username.length < 6 || password.length < 8) {
+        alert("Username must be at least 6 characters, password at least 8.");
+        return;
+      }
+
+      auth.createUserWithEmailAndPassword(email, password).then(userCred => {
+        const uid = userCred.user.uid;
+        db.ref("users/" + uid).set({
+          username: username,
+          email: email
+        });
+      }).catch(err => alert(err.message));
     }
 
     function login() {
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
-      auth.signInWithEmailAndPassword(email, password)
-        .then(() => alert('Logged in successfully.'))
-        .catch(error => alert(error.message));
+
+      auth.signInWithEmailAndPassword(email, password).catch(err => alert(err.message));
     }
 
     function logout() {
-      auth.signOut().then(() => {
-        alert("Logged out.");
-        location.reload();
-      });
+      auth.signOut();
+      location.reload();
+    }
+
+    function showEditForm() {
+      document.getElementById("editProfileForm").classList.remove("hidden");
     }
 
     function saveProfile() {
-      const uid = auth.currentUser.uid;
-      const userRef = db.ref('users/' + uid);
-      const data = {
-        username: document.getElementById('username').value,
-        name: document.getElementById('name').value,
-        age: document.getElementById('age').value,
-        gender: document.getElementById('gender').value,
-        bio: document.getElementById('bio').value
-      };
-      userRef.update(data).then(() => {
-        alert('Profile saved!');
-        window.location.href = 'view-profiles.html';
-      });
+      const newUsername = document.getElementById("editUsername").value;
+      const file = document.getElementById("profilePicInput").files[0];
+      const user = auth.currentUser;
+
+      if (!user) return;
+
+      if (newUsername.length >= 6) {
+        db.ref("users/" + user.uid).update({ username: newUsername });
+        document.getElementById("viewUsername").textContent = newUsername;
+      }
+
+      if (file) {
+        const storageRef = storage.ref("profilePics/" + user.uid);
+        storageRef.put(file).then(() => {
+          storageRef.getDownloadURL().then(url => {
+            db.ref("users/" + user.uid).update({ profilePic: url });
+            document.getElementById("profileImage").src = url;
+          });
+        });
+      }
+
+      document.getElementById("editProfileForm").classList.add("hidden");
     }
+
+    auth.onAuthStateChanged(user => {
+      if (user) {
+        document.getElementById("authForms").classList.add("hidden");
+        document.getElementById("signupForm").classList.add("hidden");
+        document.getElementById("profileView").classList.remove("hidden");
+
+        db.ref("users/" + user.uid).once("value").then(snapshot => {
+          const data = snapshot.val();
+          document.getElementById("viewUsername").textContent = data.username || "";
+          document.getElementById("viewEmail").textContent = data.email || "";
+          if (data.profilePic) {
+            document.getElementById("profileImage").src = data.profilePic;
+          } else {
+            document.getElementById("profileImage").src = "https://via.placeholder.com/100?text=VOID";
+          }
+        });
+      }
+    });
   </script>
 </body>
 </html>
