--- a/accounts.html
+++ b/accounts.html
@@ -25,11 +25,15 @@
       margin-top: 30px;
     }
 
-    input, button {
+    input, button, textarea, select {
       margin: 5px;
       padding: 10px;
       border: none;
       border-radius: 4px;
+    }
+
+    textarea {
+      resize: vertical;
     }
 
     button {
@@ -95,6 +99,10 @@
     <img id="profileImage" class="profile-pic" src="" alt="Profile Picture"><br>
     <p><strong>Username:</strong> <span id="viewUsername"></span></p>
     <p><strong>Email:</strong> <span id="viewEmail"></span></p>
+    <p><strong>Name:</strong> <span id="viewName"></span></p>
+    <p><strong>Age:</strong> <span id="viewAge"></span></p>
+    <p><strong>Gender:</strong> <span id="viewGender"></span></p>
+    <p><strong>Bio:</strong> <span id="viewBio"></span></p>
     <button onclick="showEditForm()">Edit Profile</button>
     <button onclick="logout()">Logout</button>
   </div>
@@ -102,7 +110,16 @@
   <div id="editProfileForm" class="hidden">
     <h2>Edit Profile</h2>
     <input type="text" id="editUsername" placeholder="New Username"><br>
-    <input type="file" id="profilePicInput"><br>
+    <input type="text" id="editName" placeholder="Name"><br>
+    <input type="number" id="editAge" placeholder="Age"><br>
+    <select id="editGender">
+      <option value="">Select Gender</option>
+      <option value="Male">Male</option>
+      <option value="Female">Female</option>
+      <option value="Other">Other</option>
+    </select><br>
+    <textarea id="editBio" placeholder="Bio"></textarea><br>
+    <input type="file" id="profilePicInput" accept="image/*" capture="environment"><br>
     <button onclick="saveProfile()">Save</button>
   </div>
 
@@ -112,10 +129,9 @@
       authDomain: "void-d9ec4.firebaseapp.com",
       databaseURL: "https://void-d9ec4-default-rtdb.firebaseio.com",
       projectId: "void-d9ec4",
-      storageBucket: "void-d9ec4.firebasestorage.app"",
+      storageBucket: "void-d9ec4.appspot.com",
       messagingSenderId: "267268035851",
-      appId: "1:267268035851:web:d535fe4175c06f170f3e0e",
-      measurementId: "G-78DGNW8HV3"
+      appId: "1:267268035851:web:d535fe4175c06f170f3e0e"
     };
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
@@ -149,7 +165,6 @@
     function login() {
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
-
       auth.signInWithEmailAndPassword(email, password).catch(err => alert(err.message));
     }
 
@@ -164,15 +179,23 @@
 
     function saveProfile() {
       const newUsername = document.getElementById("editUsername").value;
+      const name = document.getElementById("editName").value;
+      const age = document.getElementById("editAge").value;
+      const gender = document.getElementById("editGender").value;
+      const bio = document.getElementById("editBio").value;
       const file = document.getElementById("profilePicInput").files[0];
       const user = auth.currentUser;
 
       if (!user) return;
 
-      if (newUsername.length >= 6) {
-        db.ref("users/" + user.uid).update({ username: newUsername });
-        document.getElementById("viewUsername").textContent = newUsername;
-      }
+      const updates = {};
+      if (newUsername.length >= 6) updates.username = newUsername;
+      if (name) updates.name = name;
+      if (age) updates.age = age;
+      if (gender) updates.gender = gender;
+      if (bio) updates.bio = bio;
+
+      db.ref("users/" + user.uid).update(updates);
 
       if (file) {
         const storageRef = storage.ref("profilePics/" + user.uid);
@@ -185,6 +208,20 @@
       }
 
       document.getElementById("editProfileForm").classList.add("hidden");
+      loadProfile(user.uid);
+    }
+
+    function loadProfile(uid) {
+      db.ref("users/" + uid).once("value").then(snapshot => {
+        const data = snapshot.val() || {};
+        document.getElementById("viewUsername").textContent = data.username || "";
+        document.getElementById("viewEmail").textContent = data.email || "";
+        document.getElementById("viewName").textContent = data.name || "-";
+        document.getElementById("viewAge").textContent = data.age || "-";
+        document.getElementById("viewGender").textContent = data.gender || "-";
+        document.getElementById("viewBio").textContent = data.bio || "-";
+        document.getElementById("profileImage").src = data.profilePic || "https://via.placeholder.com/100?text=VOID";
+      });
     }
 
     auth.onAuthStateChanged(user => {
@@ -192,17 +229,7 @@
         document.getElementById("authForms").classList.add("hidden");
         document.getElementById("signupForm").classList.add("hidden");
         document.getElementById("profileView").classList.remove("hidden");
-
-        db.ref("users/" + user.uid).once("value").then(snapshot => {
-          const data = snapshot.val();
-          document.getElementById("viewUsername").textContent = data.username || "";
-          document.getElementById("viewEmail").textContent = data.email || "";
-          if (data.profilePic) {
-            document.getElementById("profileImage").src = data.profilePic;
-          } else {
-            document.getElementById("profileImage").src = "https://via.placeholder.com/100?text=VOID";
-          }
-        });
+        loadProfile(user.uid);
       }
     });
   </script>
